# k4LCIOReader

./: .gitignore  CMakeLists.txt  K4LCIOReaderVersion.h  README.md  init.sh  k4LCIOReaderVersion.h
.github/workflows/: test.yml
LCIOInput/: CMakeLists.txt
LCIOInput/src/components/: LCIOInput.cc  LCIOInput.h
LCIOInput/test/options/: lcio2edm4hep.py
cmake/: K4LCIOReaderConfig.cmake.in  K4LCIOReaderCreateConfig.cmake  k4LCIOReaderConfig.cmake  k4LCIOReaderConfig.cmake.in  k4LCIOReaderCreateConfig.cmake
doc/: ReleaseNotes.md
include/K4LCIOReader/: K4LCIOReader.h
include/k4LCIOReader/: k4LCIOReader.h
k4LCIOReader/: CMakeLists.txt
k4LCIOReader/include/k4LCIOReader/: k4LCIOConverter.h  k4LCIOReader.h
k4LCIOReader/k4LCIOReader/: k4LCIOReader.h
k4LCIOReader/src/: k4LCIOConverter.cc  k4LCIOReader.cc
k4LCIOReader/test/: read-lcio.cc  read_lcio.cc
src/: K4LCIOConverter.cc  K4LCIOConverter.h  K4LCIOReader.cc  k4LCIOConverter.cc  k4LCIOConverter.h  k4LCIOReader.cc
test/: read_lcio.cc
